React Errors.txt
1- ERROR:
  Module build failed: ReferenceError: [BABEL]
  ERROR in ./public/js/app.js
  Module build failed: ReferenceError: [BABEL]
  /Users/vladimirfernandes/Documents/Web/projects/porfolio/public/js/app.js: Unknown option: direct.presets

  SOLUTION:
    http://stackoverflow.com/questions/33630696/react-0-14-error-module-build-failed-referenceerror-babel-node-modules
    Installation
    $ npm install babel-preset-stage-0
    Add the following line to your .babelrc file:
      {"presets": ["stage-0"] }



2- ERROR:
  Error: Cannot find module 'babel-runtime/core-js/object/keys'
  Error: Cannot find module 'babel-runtime/core-js/json/stringify'

  SOLUTION:
    if you using babel core, in order to use babel register, make sure you change the require file to reflect that
      require('babel-core/register')
    Also: install babel-runtime
    https://github.com/babel/gulp-babel/issues/50

    npm install babel-runtime@5.3.0
    ADD
    npm i


3- ERROR: Invariant Violation: Element type is invalid

  SOLUTION:
    https://github.com/jedireza/hapi-react-views/issues/44
    when using require to import , make sure you call the imoort with the export module name,
    Use default for react packages

    ex: const Layout = require('./layout.jsx').default;



4- ERROR:
  Syntax Error: Unexpected token < while using renderToString(<RoutingContext {…renderProps} />
  SyntaxError: Unexpected token <

  SOLUTION:
    http://stackoverflow.com/questions/34074064/syntax-error-unexpected-token-while-using-rendertostringroutingcontext
    So I fixed the issue by making few changes to the above code

    I removed the following line as it is not required

    require('babel/register');
    Then instead of transpiling app.js via babel, I just changed the JSX tag with React.createElement() as below:

    //serverHtml: renderToString(<RoutingContext {...renderProps} />)
    serverHtml: ReactDOM.renderToString(React.createElement(RoutingContext, renderProps))



5 - ERROR:  Location did not match any routes
  browser.js:49 Warning: Location "/contact" did not match any routes

  SOLUTION:
    https://github.com/ReactTraining/react-router/issues/2117
    Make sure to instantiate the history:
    import { createHistory } from 'history';
    let history = new createHashHistory();



6 - ERROR:  Cannot resolve module 'loader' in /Users/vladimirfernandes/Documents/Web/projects/porfolio/public
    "Cannot resolve module" for CSS files

  SOLUTION:
    https://github.com/webpack/webpack/issues/1470
    npm install --save-dev style-loader
    npm install --save-dev css-loader
    webpack config make sure it's set to: test: /\.css$/, loader: "style!css"//use loader npm and style


7- ERROR: Router
  Reactjs router match callback parameters are always undefined

  SOLUTION:
    http://stackoverflow.com/questions/33528060/reactjs-router-match-callback-parameters-are-always-undefined


8- ERROR: Loading external CSS:
  SyntaxError: /Users/vladimirfernandes/Documents/Web/projects/porfolio/public/css/porfolio.css: Unexpected token (1:0)
    > 1 | .porfolio-link {
        | ^
      2 |   background: orange;
      3 |   color:#fff;
      4 | }


    import './css/porfolio.css';// this will cause errors when running npm run dev

  SOLUTION:
    1- https://github.com/webpack/webpack/issues/1754
      The workaround was the following one:

      require('babel-core/register')({
        presets: ['es2015', 'react']
      });
      require.extensions['.scss'] = () => {
        return;
      };
      require.extensions['.css'] = () => {
        return;
      };

    2- use Isomorphic Tools to handle server rendering issues:
